tests/samples/open-flow-bad-syntax.err
open-flow-bad-syntax.flow:3:Syntax error. "open flow *$second\ndo".
