tests/samples/open-flow-bad-syntax.flow
flow first do
  say "Inside the first dialog"
  open flow $second
done

flow second do
  say "Inside the second dialog"
done
